// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Banner renders correctly with a button 1`] = `
<DocumentFragment>
  .css-1n9wgfw-Container-styles {
  padding: 24px;
  border-radius: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  gap: 16px;
  background: #f1eefc;
  -webkit-background-position: right;
  background-position: right;
  background-repeat: no-repeat;
  -webkit-background-size: contain;
  background-size: contain;
}

.css-1n9wgfw-Container-styles>svg:first-child,
.css-1n9wgfw-Container-styles>img {
  height: 140px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.css-1n9wgfw-Container-styles button[name='close'] {
  background: none;
}

.css-1n9wgfw-Container-styles button[name='close']:hover {
  background: none;
}

.css-hmn6z8-Stack-ImageStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 140px;
}

.css-19d60zd-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-1yytme-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-rox34e-StyledText {
  color: #641cb3;
  font-size: 21px;
  font-family: Space Grotesk,Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 32px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-qnqg38-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-1hgmfcr-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-187g71g-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 40px;
  padding: 0 12px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: #8c40ef;
  border: none;
  color: #ffffff;
}

.css-187g71g-StyledFilledButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-187g71g-StyledFilledButton:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-187g71g-StyledFilledButton:hover,
.css-187g71g-StyledFilledButton:active {
  background: #792dd4;
  color: #f9f9fa;
}

.css-1xcp86l-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.css-1xcp86l-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-1xcp86l-StyledGhostButton:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.css-1xcp86l-StyledGhostButton:hover,
.css-1xcp86l-StyledGhostButton:active {
  background: #e9eaeb;
  color: #222638;
}

.css-1d5u3w3-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.css-1d5u3w3-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    class="css-1n9wgfw-Container-styles e1kdwp5x1"
  >
    <div
      class="css-hmn6z8-Stack-ImageStack e1kdwp5x0"
    >
      <img
        alt=""
        src="test-file-stub"
      />
    </div>
    <div
      class="css-19d60zd-Stack ehpbis70"
      style="flex: 1;"
    >
      <div
        class="css-1yytme-Stack ehpbis70"
        style="flex: 1;"
      >
        <p
          class="css-rox34e-StyledText e13y3mga0"
        >
          Title
        </p>
        <p
          class="css-qnqg38-StyledText e13y3mga0"
        >
          Description
        </p>
      </div>
      <div
        class="css-1hgmfcr-Stack ehpbis70"
      >
        <button
          class="css-187g71g-StyledFilledButton e112qvla2"
          type="button"
        >
          Button
        </button>
      </div>
    </div>
    <button
      class="css-1xcp86l-StyledGhostButton e112qvla0"
      name="close"
      type="button"
    >
      <svg
        class="css-1d5u3w3-sizeStyles e1gt4cfo0"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5.28033 4.21967C4.98744 3.92678 4.51256 3.92678 4.21967 4.21967C3.92678 4.51256 3.92678 4.98744 4.21967 5.28033L6.93934 8L4.21967 10.7197C3.92678 11.0126 3.92678 11.4874 4.21967 11.7803C4.51256 12.0732 4.98744 12.0732 5.28033 11.7803L8 9.06066L10.7197 11.7803C11.0126 12.0732 11.4874 12.0732 11.7803 11.7803C12.0732 11.4874 12.0732 11.0126 11.7803 10.7197L9.06066 8L11.7803 5.28033C12.0732 4.98744 12.0732 4.51256 11.7803 4.21967C11.4874 3.92678 11.0126 3.92678 10.7197 4.21967L8 6.93934L5.28033 4.21967Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Banner renders correctly with a link 1`] = `
<DocumentFragment>
  .css-1n9wgfw-Container-styles {
  padding: 24px;
  border-radius: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  gap: 16px;
  background: #f1eefc;
  -webkit-background-position: right;
  background-position: right;
  background-repeat: no-repeat;
  -webkit-background-size: contain;
  background-size: contain;
}

.css-1n9wgfw-Container-styles>svg:first-child,
.css-1n9wgfw-Container-styles>img {
  height: 140px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.css-1n9wgfw-Container-styles button[name='close'] {
  background: none;
}

.css-1n9wgfw-Container-styles button[name='close']:hover {
  background: none;
}

.css-hmn6z8-Stack-ImageStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 140px;
}

.css-19d60zd-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-1yytme-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-rox34e-StyledText {
  color: #641cb3;
  font-size: 21px;
  font-family: Space Grotesk,Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 32px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-qnqg38-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-1hgmfcr-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-bt0hmr-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #641cb3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
}

.css-bt0hmr-StyledLink .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.css-bt0hmr-StyledLink>* {
  pointer-events: none;
}

.css-bt0hmr-StyledLink:hover,
.css-bt0hmr-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #521094;
  text-decoration-color: #521094;
}

.css-bt0hmr-StyledLink:hover .e1afnb7a2,
.css-bt0hmr-StyledLink:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.css-bt0hmr-StyledLink[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.css-bt0hmr-StyledLink:hover::after,
.css-bt0hmr-StyledLink:focus::after {
  background-color: #641cb3;
}

.css-bt0hmr-StyledLink:active {
  text-decoration-thickness: 2px;
}

.css-1tang38-StyledExternalIconContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding-bottom: 4px;
}

.css-kfn912-sizeStyles-StyledIcon {
  vertical-align: middle;
  fill: currentColor;
  height: 14px;
  width: 14px;
  min-width: 14px;
  min-height: 14px;
}

.css-kfn912-sizeStyles-StyledIcon .fillStroke {
  stroke: currentColor;
  fill: none;
}

.css-1xcp86l-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.css-1xcp86l-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-1xcp86l-StyledGhostButton:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.css-1xcp86l-StyledGhostButton:hover,
.css-1xcp86l-StyledGhostButton:active {
  background: #e9eaeb;
  color: #222638;
}

.css-1d5u3w3-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.css-1d5u3w3-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    class="css-1n9wgfw-Container-styles e1kdwp5x1"
  >
    <div
      class="css-hmn6z8-Stack-ImageStack e1kdwp5x0"
    >
      <img
        alt=""
        src="test-file-stub"
      />
    </div>
    <div
      class="css-19d60zd-Stack ehpbis70"
      style="flex: 1;"
    >
      <div
        class="css-1yytme-Stack ehpbis70"
        style="flex: 1;"
      >
        <p
          class="css-rox34e-StyledText e13y3mga0"
        >
          Title
        </p>
        <p
          class="css-qnqg38-StyledText e13y3mga0"
        >
          Description
        </p>
      </div>
      <div
        class="css-1hgmfcr-Stack ehpbis70"
      >
        <a
          class="css-bt0hmr-StyledLink e1afnb7a0"
          data-variant="standalone"
          href=""
          prominence="default"
          rel="noopener noreferrer"
          target="_blank"
        >
          Link
          <span
            class="css-1tang38-StyledExternalIconContainer e1afnb7a1"
          >
            <svg
              class="e1afnb7a2 css-kfn912-sizeStyles-StyledIcon e1gt4cfo0"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M4.25 6.5C3.83579 6.5 3.5 6.83579 3.5 7.25V15.75C3.5 16.1642 3.83579 16.5 4.25 16.5H12.75C13.1642 16.5 13.5 16.1642 13.5 15.75V11.75C13.5 11.3358 13.8358 11 14.25 11C14.6642 11 15 11.3358 15 11.75V15.75C15 16.9926 13.9926 18 12.75 18H4.25C3.00736 18 2 16.9926 2 15.75V7.25C2 6.00736 3.00736 5 4.25 5H9.25C9.66421 5 10 5.33579 10 5.75C10 6.16421 9.66421 6.5 9.25 6.5H4.25Z"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M6.19385 13.7532C6.47175 14.0603 6.94603 14.0841 7.25319 13.8062L16.5 5.43999V8.25C16.5 8.66421 16.8358 9 17.25 9C17.6642 9 18 8.66421 18 8.25V3.75C18 3.33579 17.6642 3 17.25 3H12.75C12.3358 3 12 3.33579 12 3.75C12 4.16421 12.3358 4.5 12.75 4.5H15.3032L6.24682 12.6938C5.93966 12.9717 5.91595 13.446 6.19385 13.7532Z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </a>
      </div>
    </div>
    <button
      class="css-1xcp86l-StyledGhostButton e112qvla0"
      name="close"
      type="button"
    >
      <svg
        class="css-1d5u3w3-sizeStyles e1gt4cfo0"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5.28033 4.21967C4.98744 3.92678 4.51256 3.92678 4.21967 4.21967C3.92678 4.51256 3.92678 4.98744 4.21967 5.28033L6.93934 8L4.21967 10.7197C3.92678 11.0126 3.92678 11.4874 4.21967 11.7803C4.51256 12.0732 4.98744 12.0732 5.28033 11.7803L8 9.06066L10.7197 11.7803C11.0126 12.0732 11.4874 12.0732 11.7803 11.7803C12.0732 11.4874 12.0732 11.0126 11.7803 10.7197L9.06066 8L11.7803 5.28033C12.0732 4.98744 12.0732 4.51256 11.7803 4.21967C11.4874 3.92678 11.0126 3.92678 10.7197 4.21967L8 6.93934L5.28033 4.21967Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Banner renders correctly with an image 1`] = `
<DocumentFragment>
  .css-1n9wgfw-Container-styles {
  padding: 24px;
  border-radius: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  gap: 16px;
  background: #f1eefc;
  -webkit-background-position: right;
  background-position: right;
  background-repeat: no-repeat;
  -webkit-background-size: contain;
  background-size: contain;
}

.css-1n9wgfw-Container-styles>svg:first-child,
.css-1n9wgfw-Container-styles>img {
  height: 140px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.css-1n9wgfw-Container-styles button[name='close'] {
  background: none;
}

.css-1n9wgfw-Container-styles button[name='close']:hover {
  background: none;
}

.css-hmn6z8-Stack-ImageStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 140px;
}

.css-19d60zd-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-1yytme-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-rox34e-StyledText {
  color: #641cb3;
  font-size: 21px;
  font-family: Space Grotesk,Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 32px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-qnqg38-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-1xcp86l-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.css-1xcp86l-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-1xcp86l-StyledGhostButton:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.css-1xcp86l-StyledGhostButton:hover,
.css-1xcp86l-StyledGhostButton:active {
  background: #e9eaeb;
  color: #222638;
}

.css-1d5u3w3-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.css-1d5u3w3-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    class="css-1n9wgfw-Container-styles e1kdwp5x1"
  >
    <div
      class="css-hmn6z8-Stack-ImageStack e1kdwp5x0"
    >
      <img
        alt=""
        src="test-file-stub"
      />
    </div>
    <div
      class="css-19d60zd-Stack ehpbis70"
      style="flex: 1;"
    >
      <div
        class="css-1yytme-Stack ehpbis70"
        style="flex: 1;"
      >
        <p
          class="css-rox34e-StyledText e13y3mga0"
        >
          Title
        </p>
        <p
          class="css-qnqg38-StyledText e13y3mga0"
        >
          Description
        </p>
      </div>
    </div>
    <button
      class="css-1xcp86l-StyledGhostButton e112qvla0"
      name="close"
      type="button"
    >
      <svg
        class="css-1d5u3w3-sizeStyles e1gt4cfo0"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5.28033 4.21967C4.98744 3.92678 4.51256 3.92678 4.21967 4.21967C3.92678 4.51256 3.92678 4.98744 4.21967 5.28033L6.93934 8L4.21967 10.7197C3.92678 11.0126 3.92678 11.4874 4.21967 11.7803C4.51256 12.0732 4.98744 12.0732 5.28033 11.7803L8 9.06066L10.7197 11.7803C11.0126 12.0732 11.4874 12.0732 11.7803 11.7803C12.0732 11.4874 12.0732 11.0126 11.7803 10.7197L9.06066 8L11.7803 5.28033C12.0732 4.98744 12.0732 4.51256 11.7803 4.21967C11.4874 3.92678 11.0126 3.92678 10.7197 4.21967L8 6.93934L5.28033 4.21967Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Banner renders correctly with closable to false 1`] = `
<DocumentFragment>
  .css-1n9wgfw-Container-styles {
  padding: 24px;
  border-radius: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  gap: 16px;
  background: #f1eefc;
  -webkit-background-position: right;
  background-position: right;
  background-repeat: no-repeat;
  -webkit-background-size: contain;
  background-size: contain;
}

.css-1n9wgfw-Container-styles>svg:first-child,
.css-1n9wgfw-Container-styles>img {
  height: 140px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.css-1n9wgfw-Container-styles button[name='close'] {
  background: none;
}

.css-1n9wgfw-Container-styles button[name='close']:hover {
  background: none;
}

.css-hmn6z8-Stack-ImageStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 140px;
}

.css-wbv6k9-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-1yytme-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-rox34e-StyledText {
  color: #641cb3;
  font-size: 21px;
  font-family: Space Grotesk,Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 32px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-qnqg38-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="css-1n9wgfw-Container-styles e1kdwp5x1"
  >
    <div
      class="css-hmn6z8-Stack-ImageStack e1kdwp5x0"
    >
      <img
        alt=""
        src="test-file-stub"
      />
    </div>
    <div
      class="css-wbv6k9-Stack ehpbis70"
      style="flex: 1;"
    >
      <div
        class="css-1yytme-Stack ehpbis70"
        style="flex: 1;"
      >
        <p
          class="css-rox34e-StyledText e13y3mga0"
        >
          Title
        </p>
        <p
          class="css-qnqg38-StyledText e13y3mga0"
        >
          Description
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Banner renders correctly with default values 1`] = `
<DocumentFragment>
  .css-1n9wgfw-Container-styles {
  padding: 24px;
  border-radius: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  gap: 16px;
  background: #f1eefc;
  -webkit-background-position: right;
  background-position: right;
  background-repeat: no-repeat;
  -webkit-background-size: contain;
  background-size: contain;
}

.css-1n9wgfw-Container-styles>svg:first-child,
.css-1n9wgfw-Container-styles>img {
  height: 140px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.css-1n9wgfw-Container-styles button[name='close'] {
  background: none;
}

.css-1n9wgfw-Container-styles button[name='close']:hover {
  background: none;
}

.css-hmn6z8-Stack-ImageStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 140px;
}

.css-19d60zd-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-1yytme-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-rox34e-StyledText {
  color: #641cb3;
  font-size: 21px;
  font-family: Space Grotesk,Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 32px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-qnqg38-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-1xcp86l-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.css-1xcp86l-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-1xcp86l-StyledGhostButton:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.css-1xcp86l-StyledGhostButton:hover,
.css-1xcp86l-StyledGhostButton:active {
  background: #e9eaeb;
  color: #222638;
}

.css-1d5u3w3-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.css-1d5u3w3-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    class="css-1n9wgfw-Container-styles e1kdwp5x1"
  >
    <div
      class="css-hmn6z8-Stack-ImageStack e1kdwp5x0"
    >
      <img
        alt=""
        src="test-file-stub"
      />
    </div>
    <div
      class="css-19d60zd-Stack ehpbis70"
      style="flex: 1;"
    >
      <div
        class="css-1yytme-Stack ehpbis70"
        style="flex: 1;"
      >
        <p
          class="css-rox34e-StyledText e13y3mga0"
        >
          Title
        </p>
        <p
          class="css-qnqg38-StyledText e13y3mga0"
        >
          Description
        </p>
      </div>
    </div>
    <button
      class="css-1xcp86l-StyledGhostButton e112qvla0"
      name="close"
      type="button"
    >
      <svg
        class="css-1d5u3w3-sizeStyles e1gt4cfo0"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5.28033 4.21967C4.98744 3.92678 4.51256 3.92678 4.21967 4.21967C3.92678 4.51256 3.92678 4.98744 4.21967 5.28033L6.93934 8L4.21967 10.7197C3.92678 11.0126 3.92678 11.4874 4.21967 11.7803C4.51256 12.0732 4.98744 12.0732 5.28033 11.7803L8 9.06066L10.7197 11.7803C11.0126 12.0732 11.4874 12.0732 11.7803 11.7803C12.0732 11.4874 12.0732 11.0126 11.7803 10.7197L9.06066 8L11.7803 5.28033C12.0732 4.98744 12.0732 4.51256 11.7803 4.21967C11.4874 3.92678 11.0126 3.92678 10.7197 4.21967L8 6.93934L5.28033 4.21967Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Banner renders correctly with direction row 1`] = `
<DocumentFragment>
  .css-1n9wgfw-Container-styles {
  padding: 24px;
  border-radius: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  gap: 16px;
  background: #f1eefc;
  -webkit-background-position: right;
  background-position: right;
  background-repeat: no-repeat;
  -webkit-background-size: contain;
  background-size: contain;
}

.css-1n9wgfw-Container-styles>svg:first-child,
.css-1n9wgfw-Container-styles>img {
  height: 140px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.css-1n9wgfw-Container-styles button[name='close'] {
  background: none;
}

.css-1n9wgfw-Container-styles button[name='close']:hover {
  background: none;
}

.css-hmn6z8-Stack-ImageStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 140px;
}

.css-wbv6k9-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-1yytme-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-rox34e-StyledText {
  color: #641cb3;
  font-size: 21px;
  font-family: Space Grotesk,Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 32px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-qnqg38-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-1xcp86l-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.css-1xcp86l-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-1xcp86l-StyledGhostButton:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.css-1xcp86l-StyledGhostButton:hover,
.css-1xcp86l-StyledGhostButton:active {
  background: #e9eaeb;
  color: #222638;
}

.css-1d5u3w3-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.css-1d5u3w3-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    class="css-1n9wgfw-Container-styles e1kdwp5x1"
  >
    <div
      class="css-hmn6z8-Stack-ImageStack e1kdwp5x0"
    >
      <img
        alt=""
        src="test-file-stub"
      />
    </div>
    <div
      class="css-wbv6k9-Stack ehpbis70"
      style="flex: 1;"
    >
      <div
        class="css-1yytme-Stack ehpbis70"
        style="flex: 1;"
      >
        <p
          class="css-rox34e-StyledText e13y3mga0"
        >
          Title
        </p>
        <p
          class="css-qnqg38-StyledText e13y3mga0"
        >
          Description
        </p>
      </div>
    </div>
    <button
      class="css-1xcp86l-StyledGhostButton e112qvla0"
      name="close"
      type="button"
    >
      <svg
        class="css-1d5u3w3-sizeStyles e1gt4cfo0"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5.28033 4.21967C4.98744 3.92678 4.51256 3.92678 4.21967 4.21967C3.92678 4.51256 3.92678 4.98744 4.21967 5.28033L6.93934 8L4.21967 10.7197C3.92678 11.0126 3.92678 11.4874 4.21967 11.7803C4.51256 12.0732 4.98744 12.0732 5.28033 11.7803L8 9.06066L10.7197 11.7803C11.0126 12.0732 11.4874 12.0732 11.7803 11.7803C12.0732 11.4874 12.0732 11.0126 11.7803 10.7197L9.06066 8L11.7803 5.28033C12.0732 4.98744 12.0732 4.51256 11.7803 4.21967C11.4874 3.92678 11.0126 3.92678 10.7197 4.21967L8 6.93934L5.28033 4.21967Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Banner sizes and variants renders correctly with size medium and variant intro 1`] = `
<DocumentFragment>
  .css-1n9wgfw-Container-styles {
  padding: 24px;
  border-radius: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  gap: 16px;
  background: #f1eefc;
  -webkit-background-position: right;
  background-position: right;
  background-repeat: no-repeat;
  -webkit-background-size: contain;
  background-size: contain;
}

.css-1n9wgfw-Container-styles>svg:first-child,
.css-1n9wgfw-Container-styles>img {
  height: 140px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.css-1n9wgfw-Container-styles button[name='close'] {
  background: none;
}

.css-1n9wgfw-Container-styles button[name='close']:hover {
  background: none;
}

.css-hmn6z8-Stack-ImageStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 140px;
}

.css-19d60zd-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-1yytme-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-rox34e-StyledText {
  color: #641cb3;
  font-size: 21px;
  font-family: Space Grotesk,Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 32px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-qnqg38-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-1xcp86l-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.css-1xcp86l-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-1xcp86l-StyledGhostButton:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.css-1xcp86l-StyledGhostButton:hover,
.css-1xcp86l-StyledGhostButton:active {
  background: #e9eaeb;
  color: #222638;
}

.css-1d5u3w3-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.css-1d5u3w3-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    class="css-1n9wgfw-Container-styles e1kdwp5x1"
  >
    <div
      class="css-hmn6z8-Stack-ImageStack e1kdwp5x0"
    >
      <img
        alt=""
        src="test-file-stub"
      />
    </div>
    <div
      class="css-19d60zd-Stack ehpbis70"
      style="flex: 1;"
    >
      <div
        class="css-1yytme-Stack ehpbis70"
        style="flex: 1;"
      >
        <p
          class="css-rox34e-StyledText e13y3mga0"
        >
          Title
        </p>
        <p
          class="css-qnqg38-StyledText e13y3mga0"
        >
          Description
        </p>
      </div>
    </div>
    <button
      class="css-1xcp86l-StyledGhostButton e112qvla0"
      name="close"
      type="button"
    >
      <svg
        class="css-1d5u3w3-sizeStyles e1gt4cfo0"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5.28033 4.21967C4.98744 3.92678 4.51256 3.92678 4.21967 4.21967C3.92678 4.51256 3.92678 4.98744 4.21967 5.28033L6.93934 8L4.21967 10.7197C3.92678 11.0126 3.92678 11.4874 4.21967 11.7803C4.51256 12.0732 4.98744 12.0732 5.28033 11.7803L8 9.06066L10.7197 11.7803C11.0126 12.0732 11.4874 12.0732 11.7803 11.7803C12.0732 11.4874 12.0732 11.0126 11.7803 10.7197L9.06066 8L11.7803 5.28033C12.0732 4.98744 12.0732 4.51256 11.7803 4.21967C11.4874 3.92678 11.0126 3.92678 10.7197 4.21967L8 6.93934L5.28033 4.21967Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Banner sizes and variants renders correctly with size medium and variant promotional 1`] = `
<DocumentFragment>
  .css-1texvn3-Container-styles {
  padding: 24px;
  border-radius: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  gap: 16px;
  background-image: linear-gradient(151deg, #03cfda 0%, #3d1862 28.91%, #151a2d 75.01%);
  -webkit-background-position: right;
  background-position: right;
  background-repeat: no-repeat;
  -webkit-background-size: contain;
  background-size: contain;
}

.css-1texvn3-Container-styles>svg:first-child,
.css-1texvn3-Container-styles>img {
  height: 140px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.css-1texvn3-Container-styles button[name='close'] {
  background: none;
}

.css-1texvn3-Container-styles button[name='close']:hover {
  background: none;
}

.css-hmn6z8-Stack-ImageStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 140px;
}

.css-19d60zd-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-1yytme-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-1voptut-StyledText {
  color: #ffffff;
  font-size: 21px;
  font-family: Space Grotesk,Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 32px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-19ma3ne-StyledText {
  color: #ffffff;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-13hzq4w-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: #8c40ef;
  border: none;
  color: #ffffff;
}

.css-13hzq4w-StyledFilledButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-13hzq4w-StyledFilledButton:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-13hzq4w-StyledFilledButton:hover,
.css-13hzq4w-StyledFilledButton:active {
  background: #792dd4;
  color: #f9f9fa;
}

.css-1d5u3w3-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.css-1d5u3w3-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    class="css-1texvn3-Container-styles e1kdwp5x1"
  >
    <div
      class="css-hmn6z8-Stack-ImageStack e1kdwp5x0"
    >
      <img
        alt=""
        src="test-file-stub"
      />
    </div>
    <div
      class="css-19d60zd-Stack ehpbis70"
      style="flex: 1;"
    >
      <div
        class="css-1yytme-Stack ehpbis70"
        style="flex: 1;"
      >
        <p
          class="css-1voptut-StyledText e13y3mga0"
        >
          Title
        </p>
        <p
          class="css-19ma3ne-StyledText e13y3mga0"
        >
          Description
        </p>
      </div>
    </div>
    <button
      class="css-13hzq4w-StyledFilledButton e112qvla2"
      name="close"
      type="button"
    >
      <svg
        class="css-1d5u3w3-sizeStyles e1gt4cfo0"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5.28033 4.21967C4.98744 3.92678 4.51256 3.92678 4.21967 4.21967C3.92678 4.51256 3.92678 4.98744 4.21967 5.28033L6.93934 8L4.21967 10.7197C3.92678 11.0126 3.92678 11.4874 4.21967 11.7803C4.51256 12.0732 4.98744 12.0732 5.28033 11.7803L8 9.06066L10.7197 11.7803C11.0126 12.0732 11.4874 12.0732 11.7803 11.7803C12.0732 11.4874 12.0732 11.0126 11.7803 10.7197L9.06066 8L11.7803 5.28033C12.0732 4.98744 12.0732 4.51256 11.7803 4.21967C11.4874 3.92678 11.0126 3.92678 10.7197 4.21967L8 6.93934L5.28033 4.21967Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Banner sizes and variants renders correctly with size small and variant intro 1`] = `
<DocumentFragment>
  .css-1n2fykg-Container-styles {
  padding: 16px;
  border-radius: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  gap: 16px;
  background: #f1eefc;
  -webkit-background-position: left,right;
  background-position: left,right;
  background-repeat: no-repeat,no-repeat;
  -webkit-background-size: contain,contain;
  background-size: contain,contain;
}

.css-1n2fykg-Container-styles>svg:first-child,
.css-1n2fykg-Container-styles>img {
  height: 100px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.css-1n2fykg-Container-styles button[name='close'] {
  background: none;
}

.css-1n2fykg-Container-styles button[name='close']:hover {
  background: none;
}

.css-37jj6f-Stack-ImageStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 74px;
}

.css-19d60zd-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-1yytme-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-18fd44c-StyledText {
  color: #641cb3;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 600;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-qnqg38-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-1xcp86l-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.css-1xcp86l-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-1xcp86l-StyledGhostButton:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.css-1xcp86l-StyledGhostButton:hover,
.css-1xcp86l-StyledGhostButton:active {
  background: #e9eaeb;
  color: #222638;
}

.css-1d5u3w3-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.css-1d5u3w3-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    class="css-1n2fykg-Container-styles e1kdwp5x1"
  >
    <div
      class="css-37jj6f-Stack-ImageStack e1kdwp5x0"
    >
      <img
        alt=""
        src="test-file-stub"
      />
    </div>
    <div
      class="css-19d60zd-Stack ehpbis70"
      style="flex: 1;"
    >
      <div
        class="css-1yytme-Stack ehpbis70"
        style="flex: 1;"
      >
        <p
          class="css-18fd44c-StyledText e13y3mga0"
        >
          Title
        </p>
        <p
          class="css-qnqg38-StyledText e13y3mga0"
        >
          Description
        </p>
      </div>
    </div>
    <button
      class="css-1xcp86l-StyledGhostButton e112qvla0"
      name="close"
      type="button"
    >
      <svg
        class="css-1d5u3w3-sizeStyles e1gt4cfo0"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5.28033 4.21967C4.98744 3.92678 4.51256 3.92678 4.21967 4.21967C3.92678 4.51256 3.92678 4.98744 4.21967 5.28033L6.93934 8L4.21967 10.7197C3.92678 11.0126 3.92678 11.4874 4.21967 11.7803C4.51256 12.0732 4.98744 12.0732 5.28033 11.7803L8 9.06066L10.7197 11.7803C11.0126 12.0732 11.4874 12.0732 11.7803 11.7803C12.0732 11.4874 12.0732 11.0126 11.7803 10.7197L9.06066 8L11.7803 5.28033C12.0732 4.98744 12.0732 4.51256 11.7803 4.21967C11.4874 3.92678 11.0126 3.92678 10.7197 4.21967L8 6.93934L5.28033 4.21967Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Banner sizes and variants renders correctly with size small and variant promotional 1`] = `
<DocumentFragment>
  .css-ylo50y-Container-styles {
  padding: 16px;
  border-radius: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  gap: 16px;
  -webkit-background-position: left,right;
  background-position: left,right;
  background-image: linear-gradient(151deg, #03cfda 0%, #3d1862 28.91%, #151a2d 75.01%);
  background-repeat: no-repeat,no-repeat;
  -webkit-background-size: contain,contain;
  background-size: contain,contain;
}

.css-ylo50y-Container-styles>svg:first-child,
.css-ylo50y-Container-styles>img {
  height: 100px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.css-ylo50y-Container-styles button[name='close'] {
  background: none;
}

.css-ylo50y-Container-styles button[name='close']:hover {
  background: none;
}

.css-37jj6f-Stack-ImageStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 74px;
}

.css-19d60zd-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-1yytme-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-1wdc4om-StyledText {
  color: #ffffff;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 600;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-19ma3ne-StyledText {
  color: #ffffff;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-13hzq4w-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: #8c40ef;
  border: none;
  color: #ffffff;
}

.css-13hzq4w-StyledFilledButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-13hzq4w-StyledFilledButton:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-13hzq4w-StyledFilledButton:hover,
.css-13hzq4w-StyledFilledButton:active {
  background: #792dd4;
  color: #f9f9fa;
}

.css-1d5u3w3-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.css-1d5u3w3-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    class="css-ylo50y-Container-styles e1kdwp5x1"
  >
    <div
      class="css-37jj6f-Stack-ImageStack e1kdwp5x0"
    >
      <img
        alt=""
        src="test-file-stub"
      />
    </div>
    <div
      class="css-19d60zd-Stack ehpbis70"
      style="flex: 1;"
    >
      <div
        class="css-1yytme-Stack ehpbis70"
        style="flex: 1;"
      >
        <p
          class="css-1wdc4om-StyledText e13y3mga0"
        >
          Title
        </p>
        <p
          class="css-19ma3ne-StyledText e13y3mga0"
        >
          Description
        </p>
      </div>
    </div>
    <button
      class="css-13hzq4w-StyledFilledButton e112qvla2"
      name="close"
      type="button"
    >
      <svg
        class="css-1d5u3w3-sizeStyles e1gt4cfo0"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5.28033 4.21967C4.98744 3.92678 4.51256 3.92678 4.21967 4.21967C3.92678 4.51256 3.92678 4.98744 4.21967 5.28033L6.93934 8L4.21967 10.7197C3.92678 11.0126 3.92678 11.4874 4.21967 11.7803C4.51256 12.0732 4.98744 12.0732 5.28033 11.7803L8 9.06066L10.7197 11.7803C11.0126 12.0732 11.4874 12.0732 11.7803 11.7803C12.0732 11.4874 12.0732 11.0126 11.7803 10.7197L9.06066 8L11.7803 5.28033C12.0732 4.98744 12.0732 4.51256 11.7803 4.21967C11.4874 3.92678 11.0126 3.92678 10.7197 4.21967L8 6.93934L5.28033 4.21967Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;
